[project]
name = "mitol-django-openedx"
version = "2026.4.2"
description = "MIT Open Learning django app extensions for edx related utilities"
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"edx-opaque-keys==4.0.0",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"

[tool.bumpver]
current_version = "2026.4.2"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/openedx/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
