[project]
name = "mitol-django-scim"
version = "2025.3.31"
description = "Django application for SCIM integrations"
dependencies = [
  "django-stubs>=1.13.1",
  "django>=3.0",
  "django_scim2>=0.19.1",
  "mitol-django-common",
  "pyparsing>=3.2",
  # Remove this why py310 support is dropped
  "StrEnum>=0.4.15 ; python_version < '3.11'",
  "strenum>=0.4.15",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.bumpver]
current_version = "2025.3.31"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/scim/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
