[project]
name = "mitol-django-transcoding"
version = "2025.2.22"
description = "MIT Open Learning Django app extension for Transcoding jobs"
dependencies = [
  "mitol-django-common",
  "django-stubs>=1.13.1",
  "django>=3.0",
  "edx-opaque-keys==2.2.2",
  "boto3==1.36.22",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

[tool.bumpver]
current_version = "2025.2.22"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/transcoding/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
