[project]
name = "mitol-django-uvtestapp"
version = "2024.10.24"
description = "MIT Open Learning Django app template"
dependencies = [
"django-stubs>=1.13.1",
"django>=3.0",
"edx-opaque-keys==2.2.2",
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

[tool.bumpver]
current_version = "2024.10.24"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"mitol/uvtestapp/__init__.py" = [
    '__version__ = "{version}"',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["CHANGELOG.md", "README.md", "py.typed", "**/*.py"]
exclude = ["BUILD", "pyproject.toml"]
