[project]
name = "mitol-django-oauth-toolkit-extensions"
version = "2023.12.19.1"

[tool.bumpver]
current_version = "2023.12.19.1"
version_pattern = "YYYY.MM.DD[.INC0]"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"__init__.py" = [
    '__version__ = "{version}"',
]